[gd_scene load_steps=5 format=3 uid="uid://co0u25ye4idpp"]

[ext_resource type="Script" uid="uid://drnvg14vtsbs7" path="res://scenes/story_tree/tree_point/tree_point.gd" id="1_rq71b"]
[ext_resource type="Texture2D" uid="uid://1hygobvvi5gb" path="res://icon.svg" id="2_ags4i"]
[ext_resource type="Theme" uid="uid://cpg05nvdgcadp" path="res://assets/themes/normal_theme.tres" id="3_7cafx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ags4i"]
size = Vector2(64, 64)

[node name="TreePoint" type="Node2D"]
script = ExtResource("1_rq71b")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ags4i")

[node name="MouseHoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseHoverArea"]
shape = SubResource("RectangleShape2D_ags4i")

[node name="TextGUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="TextGUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7cafx")
theme_override_font_sizes/font_size = 35

[connection signal="mouse_entered" from="MouseHoverArea" to="." method="_on_mouse_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseHoverArea" to="." method="_on_mouse_hover_area_mouse_exited"]
